	  connections only and instead uses the global proxy configuration.

	Finch:
	* Properly detect libpanel on OpenBSD.  (Brad Smith)
	* Remove IO watches in gnt_quit.  (Tomasz Mon)

	Pidgin:
	* Fix the auto-personize functionality in the Buddy List.
	* Set the window icon for the media window to an icon corresponding to
	  the type of call (headphone or webcam).

version 2.6.1 (08/18/2009):
	* Fix a crash when some users send you a link in a Yahoo IM
	* Fix compilation with GTK+ < 2.6.0
	* Fix compilation on Windows

version 2.6.0 (08/18/2009):
	libpurple:
	* Theme support in libpurple thanks to Justin Rodriguez's summer of code
	  project, with some minor additions and cleanups from Paul Aurich.
	* Voice & Video framework in libpurple, thanks to Mike Ruprecht's summer
	  of code project in 2008.
	* It should no longer be possible to end up with duplicates of buddies
	  in a group on the buddy list.
	* Removed the unmaintained and unneeded toc protocol plugin.
	* Fixed NTLM authentication on big-endian systems.
	* Various memory cleanups when unloading libpurple. (Nick Hebner and
	  Stefan Becker)
	* Report idle time 'From last message sent' should work properly.
	* Better handling of corrupt certificates in the TLS Peers cache.
	* More efficient buddy list and conversation search functions.
	  (Jan Kaluza and Aman Gupta)
	* Install scalable versions of the main Pidgin icon, the protocol icons,
	  the dialog icons, and the Buddy List emblems.
	* Build properly on Hurd.  (Marc Dequènes)
	* Various memory leaks fixed as reported by Josh Mueller.
	* Properly handle an IRC buddy appearing in multiple groups.
	* Escape HTML entities in usernames when written with the HTML logger.
	* Do not display MySpace status changes as incoming IMs.  (Mark Doliner and
	  Justin Williams)

	DNS:
	* DNS servers are re-read when DNS queries fail in case the system has
	  moved to a new network and the old servers are not accessible.